--- a/8-言語/81／89-各言語/81-日本語/811-音声．音韻．文字/811.4-万葉仮名/811.4-万葉仮名.md
+++ b/8-言語/81／89-各言語/81-日本語/811-音声．音韻．文字/811.4-万葉仮名/811.4-万葉仮名.md
@@ -8,6 +8,145 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 万葉仮名の定義と射程
+  - 1.1 用語としての「万葉仮名」と命名の経緯（「万葉集」表記を代表例とする後世の呼称である点）
+  - 1.2 「借音」「借訓」「戯書（ぎしょ）」などとの関係と、音仮名・義仮名の区別
+  - 1.3 研究対象としての範囲（万葉集以外の歌謡・宣命・風土記・木簡・金石文など）
+  - 1.4 万葉仮名が日本語史研究で担う位置（表記史・音韻史・語彙史・文献学の接点）
+- 2. 成立前史：漢字受容と「表記の二重性」
+  - 2.1 古代東アジアにおける漢字文化圏と、日本列島での文字使用の開始
+  - 2.2 漢文・変体漢文・和化漢文の運用と、日本語を漢字で書く必要の増大
+  - 2.3 表意（語義）と表音（音声）を同じ文字体系で処理する発想の成立
+  - 2.4 朝鮮半島の事例（吏読・郷札など）との比較可能性と、安易な同一視を避ける観点
+- 3. 奈良時代を中心とする展開：万葉仮名の多様な運用
+  - 3.1 歌謡・詔勅・記録文書における表記の場面差（韻文／散文、公式／私的）
+  - 3.2 「万葉集」（8世紀後半頃に成立）に見える表記の複層性（同音異字・同語異表記）
+  - 3.3 音価の手がかりとしての万葉仮名（母音・子音の区別、拗音・促音以前の状況）
+  - 3.4 上代特殊仮名遣と万葉仮名（甲類・乙類の区別が示す音韻体系の復元可能性）
+  - 3.5 資料の地域差・書写差（作者層、書記、伝本差）と、言語事実の切り分け
+- 4. 平安期の転換：仮名成立と万葉仮名の役割変化
+  - 4.1 草書体の定着と、平仮名・片仮名（9世紀頃から）の成立過程
+  - 4.2 音仮名としての漢字表記が担った「過渡期の標準化」と、仮名への機能移行
+  - 4.3 仏典・注釈・訓点資料に残る万葉仮名的表記（学習・読解の実務との関係）
+  - 4.4 和歌・物語文学の成立（例：『古今和歌集』905年、『土佐日記』935年）と表記慣習の変化
+- 5. 中世〜近世：資料伝来・注釈学・国学へ
+  - 5.1 伝本形成と書写の層：原資料と現存資料の時間差がもたらす問題
+  - 5.2 中世の注釈・学問（歌学・訓詁）における古語理解と表記解釈
+  - 5.3 近世国学による万葉学の展開（契沖 1640–1701、賀茂真淵 1697–1769、本居宣長 1730–1801 など）
+  - 5.4 「古語・古音」をめぐる議論の整理と、万葉仮名資料の位置づけの変化
+- 6. 近代以降：言語学・音韻史研究の成立と方法の整備
+  - 6.1 明治期の学術制度化（国語学・国文学・歴史学の分化）と研究対象の再編
+  - 6.2 上代音韻研究の方法（資料批判、異本対照、体系的配列）と万葉仮名の利用
+  - 6.3 20世紀前半の成果（例：橋本進吉 1882–1945 以降の国語史研究）と論争点
+  - 6.4 研究史としての転機：表記を「音の写し」とみなす立場と、書記実践としてみなす立場
+- 7. 戦後〜現代：資料の拡大と分析環境の変化
+  - 7.1 木簡の大量出土（20世紀後半以降）による、日常文書レベルの表記資料の増加
+  - 7.2 訓点資料・金石文・地方資料の再評価と、地域語・文体差の検討
+  - 7.3 データベース化・コーパス化（検索可能なテキスト、異体字管理、校異情報）と再現可能性
+  - 7.4 文字コード化（Unicode等）と、異体字・字形差を扱う実務上の制約
+- 8. 現代の研究動向と主要論争
+  - 8.1 表記の揺れをめぐる見取り図（音韻差／語彙差／書記習慣／写本過程のどこに置くか）
+  - 8.2 上代特殊仮名遣の解釈史（母音体系・音素配列・語彙分布）と、モデル間の対立点
+  - 8.3 「表音性」の捉え方をめぐる議論（実音表記観／慣用・装飾・機能分担の重視）
+  - 8.4 学際化と研究資源の更新（歴史音韻論・文献学・書誌学・古代史／考古学、デジタル化）
 -->
+
+### 1. 万葉仮名の定義と射程
+
+万葉仮名とは、漢字を主として音価にもとづいて用い、日本語の語や語形（助詞・活用語尾を含む）を書き表した表記法を指す。呼称自体は後世の整理概念であり、古代の書記が「万葉仮名」という体系を自覚して運用していたわけではない。それでも、特に『万葉集』に見える豊富な音仮名の用例が典型例として参照されてきたため、研究史の中でこの名が定着し、古代日本語の音韻・語彙・文法を考える入口として扱われてきた。
+
+同じ漢字による表記でも、語義に従って漢字を当てる書き方（いわゆる借訓・義仮名）と、音に従って当てる書き方（借音・音仮名）とでは、資料から引き出せる情報の質が異なる。万葉仮名研究は、音仮名を「音の手がかり」として活用する方向に傾きやすい一方で、実際の資料は両者が混在し、さらに戯書（いわゆる遊戯的・意匠的な当て方）も加わって複層的である。したがって、単に「仮名の前段階」として一括するのではなく、書記が何を優先して表記を選んだのか（意味の明確さ、慣用、可読性、韻律、格式など）を含めて捉える必要がある。
+
+研究対象の射程も『万葉集』に限られない。『古事記』（712年）や『日本書紀』（720年）に含まれる歌謡、『風土記』（713年の編纂命令に始まる）の地名・伝承、続日本紀の宣命（せんみょう）文に見られる宣命書き、さらには木簡・墨書土器・金石文など、韻文と散文、公文書と私的文書が並ぶことで、古代の書記実務がより立体的に見えてくる。万葉仮名は表記史に属するテーマであると同時に、上代日本語の音韻史・語彙史・文法史、そして資料の成立・伝本を扱う文献学と密接に結びついた領域として発展してきた。
+
+この分野では、分析単位の設定そのものが研究史的に課題となってきた。万葉仮名はしばしば「一字一音（あるいは一字一拍）」の表記として語られるが、実際には二字以上で一つの音価を示す例や、語の切れ目をまたぐ表記、漢語的な読みの介入などがあり、資料ごとに規則性の程度が異なる。したがって、現代の仮名遣いに写し替えた結果だけで議論すると、原資料が持つ揺れや機能分担が見えにくくなる。万葉仮名研究が、文字・字形の観察、語彙・形態素の配列、文脈での使い分けの記述を重視してきたのは、この「単位のずれ」を管理する必要があったためでもある。
+
+### 2. 成立前史：漢字受容と「表記の二重性」
+
+万葉仮名の前提には、漢字が「意味を表す文字」であると同時に、「音（読み）を伴う文字」であるという二重性がある。日本列島で文字が用いられ始めた段階では、漢文による記録が中心であり、行政・外交・儀礼の場面で、漢文の形式と語彙を共有することが実務的に求められた。5世紀後半の金石文（稲荷山古墳鉄剣銘など）からは、漢字による記載が一定の社会的基盤を得ていたことがうかがえるが、こうした資料は日本語を直接書き下すというより、漢字文化の受容段階を示す性格が強い。
+
+しかし、律令国家の形成とともに、地名・人名・歌謡・神話伝承など、漢文の枠だけでは収まりにくい要素を記録する必要が増した。日本語には助詞や活用があり、語順も漢文とは異なるため、内容を正確に伝えるには、漢字を語義だけでなく音価の面でも利用する工夫が求められる。こうして、漢文・変体漢文・和化漢文といった運用の幅の中で、日本語を漢字で表す技法が蓄積され、音仮名的な書き方へと接続していく。
+
+また、文字使用の担い手がどこにいたかも重要である。中央の官司や寺院では、写経や公文書作成を通じて書記技能が蓄積され、一定の書式と慣用が共有されやすい。一方、地方では、同じ漢字文化の枠にありつつも、用いる資料の種類や教育環境が異なりうる。万葉仮名が後に示す多様性は、単に「音を写す工夫」の結果というより、異なる場の書記実務が合流した結果として理解する方が、資料の性格に即している場合がある。
+
+加えて、漢字を音価として利用できるためには、漢字音（音読み）の体系がある程度共有されていなければならない。古代の日本では、時期や学習経路により複数の漢字音が併存し、それが用字選択の幅を生んだ可能性がある。万葉仮名が示す表記の多様性は、日本語側の音韻だけでなく、漢字側の音価の取り込み方（どの読みを基準にしたか、どの程度まで近似を許したか）によっても左右される。この点は、万葉仮名を「日本語の音の記録」としてのみ読む解釈を抑制し、接触史として捉える視点を補強する。
+
+朝鮮半島でも、漢字を用いて固有語を表す諸技法（吏読・郷札など）が発達したことが知られている。これらは「漢字を借りて自国語を書く」という点で比較の視野を与えるが、各地域の言語構造、政治制度、文字使用の場、残存資料の性格が異なるため、同じ発想が同じ経路で実現したとみなすのは慎重であるべきだという姿勢も研究史の中で共有されてきた。万葉仮名の成立前史は、外来文字体系の受容という大枠と、固有語の記録という内的要請が交差する過程として位置づけられる。
+
+### 3. 奈良時代を中心とする展開：万葉仮名の多様な運用
+
+8世紀を中心とする奈良時代は、万葉仮名的表記が多様な形で現れる時期である。『古事記』や『日本書紀』は、散文部分が漢文・漢文訓読的な性格を持つ一方、歌謡部分では音仮名が前面に出やすい。『風土記』でも地名や伝承に関わる語形が問題となり、語の読みや語義をめぐって後世の注釈を呼んだ。続日本紀の宣命は、公的文書でありながら日本語の語順と語形を強く反映し、漢字を大字・小字に使い分けるなど、書記が可読性と規範を両立させようとした痕跡が見える。
+
+『万葉集』は、成立事情や編纂過程が単線的ではないと考えられているが、少なくとも8世紀後半頃までに集成された歌集として、同音異字・同語異表記の豊富さを示す。ある語の同一音を複数の漢字で表すこと、逆に同一字が異なる音価を担うことがあり、そこから直ちに「発音が揺れていた」と結論づけることはできない。書記の学習背景、参照した書風・字書、詠歌の伝来、写本過程など、言語外の要因が表記に入り込むためである。万葉仮名研究は、こうした要因をできるだけ切り分けた上で、言語事実として扱える部分を抽出する作業として進められてきた。
+
+宣命書きは、その切り分けの難しさを典型的に示す。宣命は日本語の語順を保ちながらも、公文書としての格式を備えるため、漢字の大字・小字の区別や、漢字の語義的使用と音仮名的使用の併用が体系化される。助詞・助動詞など文法形式を音仮名で示す傾向は、古代日本語の形態論を読み解く上で有用だが、同時に「公文書としての読みやすさ」を優先した結果でもある。つまり、表記の選択は、音韻体系の反映であると同時に、行政文書の可読性・権威づけの技術でもあった。
+
+音韻史研究にとって特に重要なのが、万葉仮名が古代日本語の音韻体系を推定する主要資料となる点である。母音の区別や子音連続の制約などは、表記の分布から間接的に推定される。なかでも、同じ「い」「え」「お」に対応するはずの表記が、語彙や形態素の分布に応じて二系列に分かれる現象は、後に上代特殊仮名遣として体系化され、上代音韻の復元をめぐる中心課題となった。ただし、現存する資料は写本であることが多く、原資料と現存資料の間に時間差がある。地域差・作者層の差・伝本差をどう評価するかは、奈良時代資料を扱う際の基礎的な論点として継続している。
+
+この時期の万葉仮名は、語の切れ目や文法形式の可視化にも関わった。たとえば助詞や助動詞、活用語尾は、語義のある漢字を当てにくいため音仮名で示されやすいが、どの形式をどの程度まで書き分けるかは資料ごとに異なる。韻文では韻律や語調が重視され、散文では書式や可読性が重視されるため、同じ語でも表記選択が変わりうる。こうした「場面差」を丁寧に記述することは、万葉仮名を音韻史の資料として使う際の前提条件であり、研究史の中で繰り返し強調されてきた。
+
+### 4. 平安期の転換：仮名成立と万葉仮名の役割変化
+
+平安時代に入ると、漢字を音価で用いる実践の中から、より簡便な表音文字として仮名が整っていく。草書体の普及と書記教育の蓄積を背景に、漢字のくずしから平仮名が、漢字の部分の抽出から片仮名が形成され、9世紀頃から用例が増えていく。こうした変化は、「漢字で日本語を書く」ための技法が、書記の熟練に依存する段階から、表記体系として共有される段階へ移ったことを意味する。
+
+この転換によって、万葉仮名は直ちに姿を消したわけではないが、役割は変化した。仮名が文学的表現の主たる媒体となるにつれ、音仮名としての漢字表記は、仮名成立以前の資料に残るもの、あるいは学習・注釈・読解の現場に残るものとして位置づけ直される。仏典や注釈の訓点資料では、本文（漢文）を読解するための書き入れが体系化され、その中で音価を示すための符号や表記が工夫される。これらは万葉仮名と連続する面を持ちながら、目的が「日本語の創作」ではなく「漢文の読解」に置かれる点で性格が異なる。
+
+また、和歌・物語文学の隆盛は、表記慣習の変化を加速した。『古今和歌集』（905年）の成立は和歌の規範化を象徴し、『土佐日記』（935年）に代表される仮名文の確立は、文体と表記が結びつく典型例となった。万葉仮名研究の側から見ると、仮名の普及以後の時代は、万葉仮名が「過渡期の標準化」を担ったのち、主役を仮名に譲るプロセスとして叙述されることが多い。ただし、この見取り図は後世の整理であり、当時の書記実践の多様性（漢字・仮名の混用、場面による使い分け）を平板化しない配慮も求められる。
+
+この時期には、文字体系への意識そのものも変化する。仏教受容の深化に伴い、漢字だけでなく悉曇（しったん）などの音写・音訓の知識が学問的に扱われ、音と文字の対応関係を意識する素地が広がったと考えられる。仮名が一般化することで、音仮名としての漢字は「高度な表記」から「特定用途の表記」へ移り、語の由来や格式、漢語的表現を示すために漢字が残るという、後世の日本語表記に連なる分業が形成されていった。
+
+さらに、仮名の成立は、万葉仮名研究史にとって「字母」の問題を生んだ。平仮名・片仮名の多くは特定の漢字形から派生するが、同じ音価に対して複数の字母が並立し、後に変体仮名として整理される。この並立は、万葉仮名段階の用字の幅広さと連続しており、書風・地域・学習系統の差が表記に痕跡を残した可能性がある。いろは順や五十音図といった音の配列も、仮名の普及と学習の体系化の中で整えられ、音韻の記述を「表記体系と結びつけて語る」枠組みが強まっていった。
+
+### 5. 中世〜近世：資料伝来・注釈学・国学へ
+
+万葉仮名の研究史は、まず資料がどのように伝わったかという問題と不可分である。『万葉集』や古記録の多くは原本が残らず、後世の書写・校訂を経た伝本によって読まれてきた。したがって、研究の前提として、異本の比較、書写習慣の把握、字形・異体字の整理といった文献学的作業が必要となる。中世には歌学・訓詁の伝統が発達し、古語理解のために表記や語釈が積み重ねられた。たとえば鎌倉時代の僧仙覚（せんがく）は『万葉集』の注釈に携わり、語釈・用例整理の枠組みを与えたとされる。
+
+近世に入ると、国学の展開とともに、古代語の復原や古典の精密な読解が志向され、万葉仮名資料は重要な根拠として再編成されていく。契沖（1640–1701）の『万葉代匠記』は、本文の校訂と語釈の精緻化を進め、後代の万葉学に大きな影響を与えた。賀茂真淵（1697–1769）は『万葉集古義』で万葉語の理解と歌風の評価を結びつけ、本居宣長（1730–1801）は『古事記伝』などを通じて古典解釈の体系化を試みた。これらは必ずしも現代言語学的な音韻復元を目指したものではないが、表記を手がかりに語の読みや語義を検討する姿勢を強め、資料の価値づけを変えたという点で研究史上の転機となった。
+
+この段階で重要なのは、万葉仮名が「古代語の証拠」として権威化される一方、その証拠性が何に支えられているか（伝本のどの層に属するのか、校訂でどこまで整えられているのか）が必ずしも明確ではなかったことである。近世注釈は、用例を広く集めることに長けていたが、写本系統の差を体系的に整理し、表記の変化を時間層として扱う枠組みは限定的だった。近代以降の研究が、注釈の成果を継承しながら、異本対照や校訂史の検討に力点を移したのは、このギャップを埋める必要があったためである。
+
+同時に、近世の出版文化も、万葉仮名の「見え方」を変えた。版本や整版本では、字形の統一や表記の整序が行われ、写本が保持していた異体字や細かな揺れが減ることがある。逆に、注釈・傍訓の付与によって、読みの体系が強く前景化し、表記そのものが「読みを確定するための証拠」として扱われやすくなった面もある。研究史をたどる上では、学説だけでなく、参照されてきたテキストの形態（写本か版本か、校訂の方針は何か）が、万葉仮名理解の枠組みを規定してきたことを押さえる必要がある。
+
+一方で、近世の学問は、古代語の「正しい読み」を定める規範志向と結びつきやすく、伝本の差や表記の揺れが持つ情報を十分に活かしきれない場合もあった。万葉仮名研究の歴史は、こうした注釈学・国学の蓄積を土台としつつ、近代以降に資料批判と音韻論が接続することで、別種の問題設定へ展開していく。
+
+### 6. 近代以降：言語学・音韻史研究の成立と方法の整備
+
+明治以降、大学制度や学会の成立により、国語学・国文学・歴史学が分化しつつ制度化されると、万葉仮名は「古典の注釈」だけでなく、「言語史の資料」として扱われる比重が増していく。上田万年（1867–1937）らによる国語学の確立は、文法・音韻・語彙を歴史的に叙述する枠組みを整え、資料の整理と方法の共有を促した。ここで重要なのは、個々の語釈や作品評価から一歩進み、表記分布を体系的に観察し、再現可能な形で議論する姿勢が強まったことである。
+
+20世紀前半には、上代音韻研究が本格化し、万葉仮名が果たす役割が明確化された。橋本進吉（1882–1945）以降、上代特殊仮名遣の分析は、語彙分布・形態素分布の精査を通じて体系化され、上代の母音体系をめぐる議論の中心となった。こうした研究は、万葉仮名を「音の写し」として最大限利用する立場に立つが、同時に、写本資料であること、書記の慣用が介在すること、語種や文体に偏りがあることなど、資料の制約もより明確に意識されるようになる。
+
+研究史の上では、国語辞典編纂や標準語教育の進展も、間接的に万葉仮名研究の基盤を支えた。大槻文彦『言海』（1891–1894年）に代表される近代辞書の整備は、語彙の記述と歴史的用例の参照を学術的作業として定着させ、古典本文の校訂・索引作成といったインフラを促した。また、金田一京助（1882–1971）などの研究は、方言・民俗語彙の観察を通じて日本語史の視野を拡張し、上代資料の解釈を「中央の規範」だけで閉じない方向へ導いた面がある。こうした周辺領域の成熟が、万葉仮名を含む上代資料研究の方法を厚くした。
+
+この時期の研究史は、言語学的方法の導入によって、議論が「正しい読み」から「体系の説明」へ移った過程としても描ける。たとえば、表記分布の観察を、音韻体系（母音の数や対立）として説明する立場は、音韻論的な整合性を重視する。一方で、資料の成立事情や書記の規範を重視する立場は、同じ分布を、文字運用の規則や書記教育の結果として説明しようとする。両者は対立するだけではなく、どの現象を音韻に帰属させ、どの現象を書記実務に帰属させるかという「切り分けの作法」を洗練させる形で相互に影響してきた。
+
+方法面では、異本対照、用例の網羅的収集、配列の基準化（語彙・形態素単位での整理）が整備され、研究が累積しやすい形になった。また、古代日本語の復元においては、同時代の漢文資料の読解、訓点資料の扱い、さらには琉球諸語との比較など、複数の証拠線を組み合わせる必要が意識される。万葉仮名研究史の中では、表記を音韻復元の一次資料とみなす方向と、書記実践としての表記体系を重視する方向がせめぎ合いながら、論点が精緻化してきた。
+
+上代特殊仮名遣に関しては、二系列の分布をどのような音韻対立として表現するかが、学説の分岐点となってきた。復元される母音の数や対立の性質については、複数のモデルが提案されており、どのモデルが妥当かは、分布の説明力だけでなく、語彙・形態の振る舞い、後代の合流や音変化の説明、資料間差の扱いといった条件によって評価される。研究史が示すのは、万葉仮名が「決定的な録音記録」ではない以上、復元は必然的に仮説であり、仮説の前提をどこまで明示して反証可能性を保つかが、議論の質を左右するという点である。
+
+### 7. 戦後〜現代：資料の拡大と分析環境の変化
+
+戦後の大きな変化は、資料の量と種類が拡大したことである。発掘調査の進展により、7〜8世紀を中心とする木簡が大量に出土し、宮都や官衙だけでなく、流通・税・作業指示など日常的な文書実務における表記が可視化された。木簡は、文学作品とは異なる語彙領域や書記層を反映しうるため、万葉仮名的表記を「歌の世界」に閉じない資料として重要性を増した。同時に、断片資料であること、出土状況と保存状態に左右されることから、解読・釈文の確度をめぐる慎重さも求められる。
+
+訓点資料や金石文、地方資料の再点検も進み、地域語・文体差の検討が深まった。たとえば、宣命や木簡に見える語形と、歌謡に見える語形が一致しない場合、それを音韻差とみるのか、文体差・書記差とみるのかが問題になる。戦後の研究は、こうした差異を単純な「正誤」や「古新」で整理せず、資料の社会的機能と書記の実務を含めて説明しようとする方向に傾いてきた。
+
+分析環境の面では、データベース化・コーパス化が進み、検索可能なテキスト、校異情報、異体字情報が研究の基盤となりつつある。これにより、個人のカード作業に依存していた用例収集が共有資源へ移行し、議論の検証可能性が高まった。一方で、文字コード（Unicode等）で異体字・字形差をどこまで表現できるか、検索の単位をどう設計するかといった実務上の制約もあり、資料の豊かさがそのまま計算機処理に乗るわけではないという問題も露呈している。
+
+加えて、研究史上の「版」と「釈」の重みづけも変わった。戦後の本文校訂や注釈の大規模事業は、研究の共通土台を整えたが、同時に、底本選択や校訂方針がどのように表記を見えにくく／見えやすくしたかというメタな問題も生んだ。現代のデジタル資源は、異本や校異を並列的に参照できる利点を持つ一方、入力規則や正規化の過程で差異が吸収される危険もある。資料の拡大は、研究の自由度を高めると同時に、取り扱いの基準をより厳密にすることを要求している。
+
+研究環境の整備という観点では、国立国語研究所（1948年設立）や国文学研究資料館、奈良文化財研究所など、言語・文献・考古資料を扱う諸機関の役割も大きい。木簡の釈読・公開、古典籍の画像公開、索引・注釈の電子化といった基盤整備は、個々の学説の当否とは別に、研究の再検討を可能にする条件を広げた。万葉仮名研究が、特定の学派や個人の蓄積に強く依存していた時代から、共有資源を前提に方法を競う時代へ移りつつあることは、研究史の重要な特徴として挙げられる。
+
+### 8. 現代の研究動向と主要論争
+
+現代の万葉仮名研究は、表記の揺れをどこに位置づけるかという基本問題を共有している。ある表記差が、当時の音韻差（方言差・語中環境差を含む）を反映するのか、それとも語彙選択や慣用、書記教育、写本過程の影響なのかを見極めるには、単一資料の内部観察だけでは不十分で、複数ジャンル・複数伝本・複数地域の照合が求められる。ここで、木簡や宣命、訓点資料が加わったことは、従来の議論を補強する可能性と同時に、資料間の非整合を説明する新たな課題も生んでいる。
+
+上代特殊仮名遣の解釈史は、その代表的な論争領域である。二系列の分布を母音の対立と捉える立場は、上代日本語の母音体系をより細かく復元しようとするが、復元された体系がどの程度まで資料から強く拘束されているか、どの仮定が追加的なのかをめぐって議論が続く。また、分布が語彙層（和語・漢語・外来要素）や形態素境界とどう関わるか、写本の層をどう統制するかによって、結論が変わりうる点も、研究史を通じて繰り返し確認されてきた。
+
+さらに、万葉仮名の「表音性」をどう評価するかも争点となる。万葉仮名を基本的に実音に近い表記とみなし、音韻復元に積極的に用いる立場がある一方、表記が必ずしも音の写しではなく、慣用・視覚的配慮・語の識別、さらには意匠的な選択に支えられているという見方も強い。後者の観点からは、万葉仮名は単なる前史ではなく、漢字と日本語の接触の中で形成された書記実践そのものとして再評価される。
+
+近年は、議論の材料が増えたことで、説明の仕方自体が多様化している。従来の代表的資料（歌集・史書）だけでなく、木簡のような断片資料を大量に扱う場面では、個別読解に加えて、頻度分布や共起、書式のパターンといった量的観察が有効になることがある。ただし、量的手法は、入力段階の釈文や正規化の前提に強く依存するため、計算結果が一次資料の性格を代替しないことも明確である。万葉仮名研究の主要論争は、最終的には「どの前提を置けば、どの範囲の資料が説明でき、どの範囲が説明できないか」という形で評価されるべきだという点で、方法論的な自覚を深めてきた。
+
+その意味で、現代の議論は結論の単純化を避ける方向にある。上代の母音体系をどう復元するかという問題は、表記分布の説明力だけでなく、後代における音韻変化（合流の時期や条件）の説明、語彙史・形態史との整合、さらには周辺諸言語との比較可能性など、複数の観点を同時に満たす必要がある。逆に、書記実践として万葉仮名を重視する立場も、どの規則性を「慣用」と呼び、どの差異を「偶然」と見なすのかが問われる。資料が増え、方法が多様化した現在ほど、仮説の射程と限界を明示しながら議論を積み上げる態度が、研究史の帰結として重要になっている。
+
+万葉仮名の分野史を振り返ると、対象は「古代の表記法」から出発しながら、やがて「資料をどう作り、どう伝え、どう読むか」という研究方法の歴史へと重心が移ってきたことが分かる。仮名の成立によって万葉仮名は歴史化されたが、その歴史化の仕方（仮名の前史として扱うのか、漢字運用の一形態として扱うのか）は時代ごとに変わり、音韻復元と書記実践理解のあいだで揺れてきた。現代の研究は、その揺れを前提に、複数資料・複数方法をつき合わせて説明範囲を明確化する方向へ進んでいる。
+
+こうした論点は、歴史音韻論、文献学、書誌学、古代史・考古学、情報学的手法といった隣接領域との接続の中で更新されている。研究資源が拡大し、再現可能な分析が志向されるほど、一次資料の性格（成立と伝来の層、表記規範の有無、書記の目的）をどの程度までモデルに組み込むかが問われる。万葉仮名研究の歴史は、資料の増加と方法の精緻化を通じて、音韻復元と書記実践理解の両面を往復しながら展開してきたと言える。
