--- a/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/728-書．書道/728.4-漢字の書体および書法/728.4-漢字の書体および書法.md
+++ b/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/728-書．書道/728.4-漢字の書体および書法/728.4-漢字の書体および書法.md
@@ -8,6 +8,128 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 「漢字の書体」と「書法」の成立：文字の造形・筆記具（筆・墨・紙）・書写文化の前提
+- 2. 先秦〜秦の字形整理：甲骨文・金文から篆書へ、小篆の統一（前221年）と規範字形の発想
+- 3. 漢代の隷書化と実務文書：隷書の普及、章草の形成、書写の技能が「法」として意識される過程
+- 4. 魏晋〜南北朝の体系化：鍾繇と楷書の萌芽、王羲之・王献之と行書／草書の典範、筆法・結体の語彙化
+- 5. 法帖・拓本・臨書の学習モデル：真跡の希少化と複製、集帖・刻帖の流通が「正しい書」を形づくる
+- 6. 隋唐の正統化と官学：科挙・官文書と楷書の標準、欧陽詢・虞世南・褚遂良・顔真卿・柳公権、孫過庭『書譜』など理論の整備
+- 7. 宋代の文人書と評価軸の転換：蘇軾・黄庭堅・米芾ら、筆意・気韻を重んじる批評と帖学の深化
+- 8. 元明の復古・整理：趙孟頫の古典回帰、董其昌の枠組み、版刻法帖と臨書規範の標準化
+- 9. 清代の金石学・碑学：碑刻・出土資料への関心、包世臣・康有為らの論、篆隷の再評価（鄧石如など）と筆法観の変化
+- 10. 近代以降の再編：漢字文化圏（日本・朝鮮など）での受容と制度化、活字書体（宋体／明朝体・黒体）・標準字体／簡体字・Unicodeとデジタルフォント、現代書の展開
 -->
+
+### 1. 「漢字の書体」と「書法」の成立：文字の造形・筆記具（筆・墨・紙）・書写文化の前提
+
+「漢字の書体」と「書法」は、もともと別々の問題系として現れた。書体は文字の形の型（字形）と、その型が社会の中で共有される仕方に関わる。一方、書法は筆記の運動や道具の扱い方、字を組み立てる手順、さらにそれを学習・評価する語彙や規範の総体に関わる。両者は密接に結びつくが、歴史的には、まず実用のための「書く技術」があり、次にその技術が鑑賞・教育・権威化の過程で「法」として言語化され、同時に「正しい形」としての規範字形が強まっていった、とみるのが自然である。
+
+初期の漢字資料（甲骨・青銅器銘文など）は、刻む・鋳るという制作条件が字形を強く拘束していた。線は刃物や鋳型に適した形へと制約され、筆触のニュアンスを直接には残しにくい。逆に、筆による書写が広がると、線の太細・起筆終筆・速度変化といった要素が字形の中へ入り込み、同じ字でも多様な書き方が生じる。ここで重要なのは、書体を固定した「図形」とだけ捉えると、筆記の運動が生む差異を説明できない点である。書法が語られるようになるのは、まさにその差異を制御し、再現可能な学習対象にする必要が生まれたためでもあった。
+
+また、現代の教科書的な分類（篆書・隷書・楷書・行書・草書）が、当初から明確に意識されていたわけではない。後代の整理により「書体史」として見通しが良くなった反面、実際の資料は移行期の混淆が多い。したがって、この分野の歴史は「いつ何体が発明されたか」という単線的な物語だけではなく、道具・制度・複製技術・学習法が、字形と筆法の双方をどう規範化したかとして追う必要がある。
+
+さらに言えば、書体と書法は「読む／書く」能力の訓練とも切り離せない。字形の標準は誤読や誤写を減らし、行政や教育の効率を上げるが、その標準が強まるほど、個別の書風は「逸脱」として扱われやすい。逆に、書法が芸術として語られるとき、可読性よりも運筆の説得力や空間構成が重視されることがある。両者の緊張は、古代から現代まで繰り返し現れる構図であり、この分野を単に美術史の一部としてではなく、社会の情報インフラの歴史としても捉える根拠になる。
+
+### 2. 先秦〜秦の字形整理：甲骨文・金文から篆書へ、小篆の統一（前221年）と規範字形の発想
+
+殷（商）代の甲骨文や周代の金文は、宗教儀礼・王権・記念の用途と結びつき、文字が「刻まれる／鋳込まれるもの」として成立していたことを示す。字形は多様で、同一語の表記にも揺れがあるが、それは未熟さというより、地域差・工房差・媒体差がそのまま残っていると理解した方が妥当である。戦国期になると、諸国で用いられる字形の差異が政治的な課題となり、行政文書や法令の運用には、一定の互換性が求められた。
+
+秦の統一（前221年）に伴う字形の整理は、後世「小篆の統一」として象徴化される。李斯（?〜前208）が関与したとされる規範化は、帝国が広域統治を行ううえで、文字を標準化装置として用いたことを意味する。ただし、実際の運用は一様ではなく、刻石や器物に残る篆書の姿が「標準」として機能した一方、日常の実務ではより迅速な書写が必要で、別の方向の変化も同時に進んだ。ここに、規範字形（標準）と実務筆記（速度・可読性）が引き合う構造が早くも現れている。
+
+また、秦漢以降に編まれた字書や解説は、字形を体系として把握し、説明し、伝える営みを生んだ。許慎『説文解字』（100年頃成立）に見られるような部首・六書の枠組みは、文字を「歴史ある形の体系」として理解する視点を提供し、のちの書体論や古文字学の基礎語彙ともなった。書体の歴史は、造形そのものの変遷だけでなく、それを言語化して整理する枠組みの歴史でもある。
+
+加えて、戦国〜秦の資料が示すのは、中央の標準が常に末端へ即時に浸透するわけではないという現実である。たとえば竹簡・木簡に残る書きぶりは、刻石のような「見せる標準」と比べて柔軟で、地方行政や軍事の現場が速度と実用性を優先したことがうかがえる。後代の「統一」の語りは、統一を掲げる政治的理念が強く反映されるため、実際の多様な書写実態と距離がある場合がある点には注意が必要である。
+
+戦国期の「古文字」は、後世の復古運動の重要な参照点にもなった。石鼓文（成立年代には諸説ある）や戦国楚簡などは、のちに発見・再評価されることで、「篆書＝秦の標準」という単純化を揺さぶり、篆書内部の多様性を可視化した。つまり、書体史は当時の変化だけでなく、後代の発見と解釈が過去像を更新していく過程を含む。
+
+### 3. 漢代の隷書化と実務文書：隷書の普及、章草の形成、書写の技能が「法」として意識される過程
+
+漢代には、官僚制の拡大と文書行政の常態化により、速く、読みやすく、標準化しやすい書写が求められた。篆書の円転的な線は、刻石などでは威厳を示すが、実務の筆記には負担が大きい。そこで字形は省略・直線化し、横画の強調や波磔に特徴づけられる隷書が広く用いられるようになる。後漢の碑刻（『礼器碑』156年、『曹全碑』185年など）は、隷書が単なる実用体にとどまらず、記念碑という「見られる文字」においても洗練された様式を獲得したことを示す。
+
+この時期、草書の原型として章草が形づくられた。草書は単に崩した字ではなく、連綿や省略の規則が共有されなければ読めないため、一定の学習共同体と規範を必要とする。張芝（?〜192、草聖と称される）に代表されるように、速記の便宜から生まれた書き方が、鑑賞と伝承の対象へと転じていく。ここに、書写技能が「個人の癖」から「共有された作法」へ移る契機がある。
+
+さらに、紙の普及（蔡倫の改良が105年と伝えられるが、実際には複合的な改良の累積とみるのが妥当）や、筆・墨の供給が安定することで、書写の練習と資料保存が容易になった。残された簡牘や写本は、日常の筆記が多様であったこと、そしてその多様さの中から「良い書」「正しい書」を選別する視線が育っていったことを物語る。書法は、素材・制度・評価の三つが揃う場で初めて強く立ち上がる。
+
+隷書はまた、後代の楷書へ至る橋渡しでもあった。隷書の中には「八分」と呼ばれる端正化の傾向があり、点画を分節して整える意識が強まると、字形はさらに安定した方向へ進む。碑刻における隷書の洗練は、実務筆記の簡略化とは逆に、規範としての「美しい隷」を生み、古典として学ばれる対象になった。この二重性（実用の簡略化と、規範としての精緻化）が、書体を単なる速度の問題から、価値判断の問題へ押し上げた。
+
+実務の側では、文書作成を担う書吏の養成と運用が、書法の「手順化」を促した。書き損じを避けるための筆順・運筆、文書様式の統一、定型句の書き慣れといった要素は、個々の書き手の技巧を超えて、組織の技能として蓄積される。程邈が隷書を作ったという伝承の真偽は別として、隷書が官僚制の中で制度的に支えられたこと自体は、書体変化の主要因だった。
+
+### 4. 魏晋〜南北朝の体系化：鍾繇と楷書の萌芽、王羲之・王献之と行書／草書の典範、筆法・結体の語彙化
+
+魏晋から南北朝にかけては、政治的には分裂と移動の時代だが、書の世界では「典範」と「理論語彙」が整っていく時期でもある。鍾繇（151〜230）は楷書の祖と位置づけられ、隷書的な要素を残しながらも、字形を安定させる方向を示したとされる。ただし現存作品には後代の模本や刻本が多く、真跡の問題が常に付きまとう点は、この分野史の難しさである。にもかかわらず、鍾繇が「楷の方向」を象徴するのは、書写が公的文書の可読性と権威を担う場面で、安定した字形が求められたからである。
+
+王羲之（303〜361）と王献之（344〜386）は、行書・草書の理想像として長く参照され、のちに「書聖」といった称号や評価体系の中心に据えられた。『蘭亭序』（353年）は原本が伝わらないが、唐代以降の複製を通じて、「筆勢」「呼吸」「行間」のような評価語彙を呼び込み、書法を語る共通言語を広げた。行書は楷の可読性と草の速度の間に位置し、日常筆記と鑑賞の双方に適するため、標準的な学習対象となりやすかった。
+
+この時代に重要なのは、筆記の運動が「筆法」として言語化され、字を組み立てる構造が「結体」として意識されるようになった点である。たとえば起筆・送筆・収筆、点画の呼応、偏旁の配置、字勢のとり方などが、単なる感覚ではなく、伝えうる技術として扱われ始める。もちろん当時の言葉が現代の技法用語と一対一対応するわけではないが、理論化の方向性そのものが、書体（字形の型）と書法（運動の型）を結びつける骨格を作った。
+
+同時に、書が社交と政治に深く関わった点も見逃せない。書簡は人間関係の媒体であり、書き手の教養や品位を示す指標でもあった。貴族層のサロン的な鑑賞環境では、同じ字形でも、線の抑揚や行気の流れが「人柄」や「気」を語るものとされ、評価語彙が精神論へ拡張する。後代に「二王」が典範化される背景には、作品の美的価値だけでなく、こうした社会的な象徴資本としての機能があった。
+
+この時期以降、仏教の写経も書体・書法の広がりに寄与する。写経は大量の書写を必要とし、楷書的な整斉さを要求する一方、地域によって筆致の癖が残り、写本資料として多様な字形を伝える。写経所の運用や、書き手の技能差をどう管理するかは、書法を「教えられる技術」にする圧力として働いた。宗教実践が、行政とは別の回路で標準化を進めた点は、分野史として押さえる価値がある。
+
+### 5. 法帖・拓本・臨書の学習モデル：真跡の希少化と複製、集帖・刻帖の流通が「正しい書」を形づくる
+
+書の世界では、名品が名品であり続けるために、複製の仕組みが不可欠だった。真跡は散逸しやすく、権力者の収蔵や戦乱による喪失も多い。そこで、紙本を写す臨書・模写に加え、石に刻して拓本で配布する刻帖が、学習と評価の基盤となっていく。拓本は筆触を完全には再現しないが、線の骨格や結体を比較するには有効であり、「正しい形」を共有する装置として機能した。
+
+宋代の『淳化閣帖』（992年）に代表される集帖は、皇帝権力の後ろ盾を得て「正統」の系譜を可視化し、後代の帖学（法帖中心の学習）を方向づけた。一方で、刻帖は刻工の癖、原本選定の恣意、改竄や偽作の混入といった問題も抱える。つまり、複製が普及するほど、真偽鑑定と批評の技術が必要になり、書法の語彙は美的評価だけでなく、資料批判の語彙も含むようになる。
+
+臨書は単なる模倣ではなく、過去の典範を身体化し、そこから逸脱する自由を得るための訓練として位置づけられた。ここで学習モデルとしての「範本」が確立すると、書体は歴史上の変遷であると同時に、学ぶべきコース（篆・隷・楷・行・草の順序など）として再編される。分野としての「漢字の書体および書法」は、こうした教育カリキュラム化と強く結びついて形成されていった。
+
+また、拓本文化は「見本の共有」を可能にする一方で、線の質をめぐる解釈の幅も生んだ。石に刻された線は、本来の筆線の情報を部分的に失い、刻刀の角や石質の影響を受ける。にもかかわらず鑑賞者は、そこから筆圧や速度を逆算しようとし、筆法論がいっそう精緻化した。言い換えれば、複製が不完全であること自体が、書法を語る言葉を増殖させたとも言える。
+
+刻帖の政治性も無視できない。どの書家を「典範」に据えるかは、趣味判断であると同時に、文化権威の編成である。宋の『宣和書譜』（12世紀）や、清の乾隆期に編まれた『三希堂法帖』（18世紀）のように、宮廷が収蔵と編纂を通じて正統を提示する例では、王権の正当化と美学が絡み合う。書体・書法の「正しさ」は、しばしば制度が裏打ちする正統性として流通した。
+
+### 6. 隋唐の正統化と官学：科挙・官文書と楷書の標準、欧陽詢・虞世南・褚遂良・顔真卿・柳公権、孫過庭『書譜』など理論の整備
+
+隋唐期は、統一国家の官僚制と試験制度が整う中で、楷書が公的な標準として強固になる。読み間違いの余地が小さく、写し手が変わっても形を揃えやすい楷書は、行政の文字として都合が良い。欧陽詢（557〜641）、虞世南（558〜638）、褚遂良（596〜658）は初唐楷書の規範を示し、顔真卿（709〜785）と柳公権（778〜865）は中唐以降の典型として、書法の教材体系の核となった。彼らが「正統」として扱われる背景には、碑刻や官文書という公共媒体に作品が残りやすかったという資料条件もある。
+
+理論面では、孫過庭『書譜』（687年）が、技術論と美学、学習論を結びつけたテキストとして特に重要である。草書を中心にしつつも、臨書・創作・精神状態と筆致の関係などが論じられ、書法が単なる手先の技術ではなく、人格修養や鑑賞の言葉と結びついて語られる枠組みを与えた。また張懐瓘『書断』（8世紀）などの評伝的著作は、書家の位置づけと書体の価値序列を整理し、後代の「書史」叙述の雛形となった。
+
+唐代は多様性の時代でもあり、楷書の正統化と並んで草書表現が極端に先鋭化した。張旭（生没年未詳、8世紀）や懐素（737〜799）の「狂草」は、規範の徹底がもたらす反動としても理解できる。彼らの作品は、可読性を犠牲にし得るほど「線の勢い」やリズムが重視され、書法が音楽的・身体的な運動として語られる契機になった。標準の成立は、標準からの逸脱をも評価対象として立ち上げる。
+
+また、唐の書法は東アジアへ強い影響を及ぼした。日本では遣唐使（7〜9世紀）を通じて法帖や書風が移入され、空海（774〜835）を含む「三筆」に代表されるように、漢字書の規範形成に唐楷が深く関与した。朝鮮半島でも唐風の受容は官僚制・儒教教育と結びつき、楷書を中心とする書写の標準が整えられていく。こうした越境的受容は、書体が単一地域の発明ではなく、学習と制度のネットワークで拡散したことを示す。
+
+ただし、国家が標準を作るほど、周縁的な書き方や地域差は記録からこぼれやすい。後世の「唐楷＝正しい」という見方は、制度が残した可視的な成果に引きずられた面もある。この分野の歴史を書くうえでは、標準化の達成と、その影で均されていく多様性の両方を押さえる必要がある。
+
+### 7. 宋代の文人書と評価軸の転換：蘇軾・黄庭堅・米芾ら、筆意・気韻を重んじる批評と帖学の深化
+
+宋代には、書が詩文・絵画と並ぶ文人教養の核心として位置づけられ、評価軸が「法度の正しさ」だけでなく「筆意」や「気韻」といった、より表現的な語彙へ広がる。蘇軾（1037〜1101）、黄庭堅（1045〜1105）、米芾（1051〜1107）、蔡襄（1012〜1067）らは、唐楷の規範を踏まえつつも、個々の性情や学養が線に現れることを積極的に肯定した。徽宗（1082〜1135）の「瘦金体」は、宮廷文化と個人様式が結びついた例として象徴的である。
+
+この転換は、自由化というより、規範が十分に共有された後の「規範の使い方」の議論が深化したと捉える方が近い。米芾の言説（『海岳名言』などに集成される）は、古人の真跡への執着と、鑑賞者としての眼の訓練を強調し、帖学の批評語彙を洗練させた。結果として、法帖の蒐集・鑑定・臨書が、単なる学習手段から文化資本へと転じ、書体と書法をめぐる「正統」の物語がいっそう強くなる。
+
+同時に、出版と流通の拡大は、書の知識を専門家から広い層へ開いた。これは教育の裾野を広げた反面、複製が増えるほど偽作・改竄・選択の偏りも増える。宋代の文人書は、表現の自由を語りながら、資料の真偽と伝承の制度に依存していた点で、近代の芸術制度にも通じる二面性を持つ。
+
+宋代にはまた、書体の「標準」が必ずしも官の側だけから与えられるのではなく、鑑賞共同体の合意によっても作られることが明確になる。ある書風が「雅」と見なされるのか「俗」と退けられるのかは、技術の問題だけでなく、誰が評価権を持つかの問題でもある。文人批評が影響力を持つほど、書法は社会階層や文化資本の差を可視化する装置にもなり、これが後代の臨書規範や名跡崇拝の強度を支えた。
+
+### 8. 元明の復古・整理：趙孟頫の古典回帰、董其昌の枠組み、版刻法帖と臨書規範の標準化
+
+元代の趙孟頫（1254〜1322）は、晋唐の古典への回帰を掲げ、当時の書風を「古法」からの逸脱として批判しつつ、結体の端正さと筆致の流麗さを両立させた。その姿勢は、単なる懐古ではなく、過去の典範を再編集して新たな規範を作る運動でもあった。復古は「何に戻るか」を選別する行為であり、ここでも書体史は解釈史として進む。
+
+明代になると、董其昌（1555〜1636）が書画の系譜を整理する枠組みを提示し、南北宗のような分類が評価と教育の指針として作用する。こうした理論は明快で伝えやすい一方、複雑な実態を二分法へ押し込める危険も抱える。分野の歴史としては、分類の便利さと同時に、その分類が何を見えにくくしたかも含めて扱う必要がある。
+
+版刻法帖の整備と普及もこの時期に進み、臨書の順序や手本のカノンがいっそう固定化した。書法は「どの古典を、どの順に、どう写すか」という実践の体系として標準化され、地方・身分を越えて共有されやすくなる。結果として、書体は歴史的現象であると同時に、近世の教育制度が作る「規範の地図」として存在するようになった。
+
+一方で、明末には祝允明（1461〜1527）、文徵明（1470〜1559）、王鐸（1592〜1652）らが、古典を踏まえながらも強い個性を示し、臨書中心の規範化に対して表現の振幅を広げた。特に王鐸は、揺れ動く時代状況と結びつくように奔放な運筆と構成を展開し、後世の評価も分かれた。ここでも、規範の固定化と、それを押し返す表現の衝動が同時に進む。
+
+### 9. 清代の金石学・碑学：碑刻・出土資料への関心、包世臣・康有為らの論、篆隷の再評価（鄧石如など）と筆法観の変化
+
+清代には金石学が興隆し、碑刻・銘文・出土文字への関心が、書体観と学習モデルを大きく揺さぶった。帖学が法帖中心に「名家の流れ」を追うのに対し、碑学は石刻に残る古い字形や筆勢（と見なされるもの）を重視し、特に篆書・隷書の再評価を促した。阮元（1764〜1849）の「北碑南帖」論は、資料の系統を意識した議論として影響力を持ち、包世臣（1775〜1855）『芸舟双楫』、康有為（1858〜1927）『広芸舟双楫』（1891年）などは、碑学を理論的に正当化しようとした。
+
+実作の面では、鄧石如（1743〜1805）が篆隷を新たな筆法で再構成し、趙之謙（1829〜1884）、何紹基（1799〜1873）、呉昌碩（1844〜1927）らが碑刻的な線質や構造を取り込みながら、多様な表現を展開した。ここで重要なのは、「古い資料に戻る」ことが、そのまま古代の再現になるわけではない点である。拓本の欠損や石の風化、刻工の介在、さらに当時の美意識が「古さ」を価値化することで、碑学は新しい様式として成立した。
+
+また、金石資料の増加は、偽碑・偽拓・贋作の問題も増幅した。資料批判と鑑定は、書法の外側にある付随技能ではなく、何を典範として学ぶかを決める中心技術となる。分野としての「書体および書法」は、作品制作と同じくらい、資料を扱う方法論によって形作られてきたことが、この時期に特に明確になる。
+
+碑学の流行は、審美的選好の変化だけでなく、学問制度の成熟とも連動していた。金石拓本の収集・編纂は、地方官や知識人のネットワークを通じて進み、拓本の質や伝来の確かさが評価の指標となった。だが市場が拡大すると、見栄えを良くするための重拓や補刻、あるいは「古拙」を演出する作為も入り込みやすい。碑学が掲げた「真」を追う姿勢は、同時に「真らしさ」をめぐる競争も生んだ点で、純粋な復古運動としては捉えきれない。
+
+### 10. 近代以降の再編：漢字文化圏（日本・朝鮮など）での受容と制度化、活字書体（宋体／明朝体・黒体）・標準字体／簡体字・Unicodeとデジタルフォント、現代書の展開
+
+近代以降、書体と書法は、国家の教育制度・印刷出版・情報技術の変化の中で再編される。中国では、清末から民国期にかけて学校教育や展覧会制度が整い、書は伝統教養であると同時に「国民文化」として語られるようになった。中華人民共和国では、1956年以降の文字簡化や標準化が進み、手書きの規範（楷書の標準）と、印刷・表示の規範（字体・字形）の整合が政策課題となった。標準化は読み書きの効率を高める一方、歴史的字形や異体字の扱いをめぐって摩擦も生み、書法の側には「どの字形を正統とするか」という問題が持ち込まれ続けている。
+
+日本でも、近代学校制度の成立以後、習字が訓練科目として整備され、楷・行を中心とする学習順序が一般化した。書の団体や展覧会は評価基準を共有させる装置となり、戦後には比田井南谷（1912〜1999）、手島右卿（1901〜1987）、森田子龍（1912〜1998）らが、古典臨書の枠組みを踏まえつつ抽象性や空間性を強めた「現代書」を展開し、書法を近代美術の文脈へ接続した。一方で、前衛的表現は読解可能性を下げやすく、文字性と造形性の均衡をどこに置くかは、現在も評価が割れやすい論点である。
+
+印刷技術の側では、宋体（中国）や明朝体（日本）に代表される活字書体が、木版・金属活字・写真植字・デジタルフォントへと媒体を変えながら、「読みやすい標準字形」を日常的に供給してきた。黒体（ゴシック体）などの新しい書体は、近代の広告・表示・画面表示の要請から発達し、手書きの筆法とは別の設計原理（ストロークの均質化、端点処理、字面設計）を洗練させた。ここでは「書体」は筆の運動から切り離され、設計・規格・データとして扱われる。
+
+そして20世紀末以降、文字コードとフォントの標準化（Unicodeの制定は1991年）が、漢字を国境を越えて表示・交換する基盤となった。利便性は大きいが、字形差の吸収やグリフ設計の統合は、歴史的・地域的な多様性を見えにくくもする。現代の「漢字の書体および書法」は、古典の臨書体系、金石資料に基づく復古・研究、教育制度の標準化、そしてデジタル環境の規格化が並存し、ときに緊張しながら共存している分野として位置づけられる。
+
+同じ漢字文化圏でも、朝鮮半島では漢字運用の歴史が長く、朝鮮王朝期の書は中国古典の受容と独自の審美の間で展開した。金正喜（1786〜1856）の「秋史体」はその代表例で、碑学的な古拙さと文人趣味が結びつき、書体選好の国際的連鎖を示している。近代以降は国語政策の変化により漢字の社会的役割が揺らぎ、漢字書法は教養・芸術として残る側面が強まった。こうした地域差は、同じ「漢字の書体」を語る際にも、制度・教育・使用域の違いが書法の位置づけを変えることを示している。
+
+日本の側でも、字体政策と活字文化は書体観に影響した。1946年の当用漢字表、1981年の常用漢字表（2010年改定）といった枠組みは、日常で扱う漢字の範囲を定め、標準字体（新字体）を通じて「正しい字形」を再定義した。活字・画面表示が支配的になるほど、筆で書くときの字形も印刷字形に引き寄せられやすく、書法教育は「手書きの合理性」と「活字の標準」の間で調整を迫られる。デジタルフォントは楷書系（楷体）などの筆意を設計として取り込む一方、規格化と互換性が優先されるため、個別の筆勢や偶然性をどこまで残せるかは限界もある。
