721の分野の歴史を追加

--- a/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/721／723-様式別の絵画/721-日本画/721-日本画.md
+++ b/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/721／723-様式別の絵画/721-日本画/721-日本画.md
@@ -8,6 +8,158 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 「日本画」の語と射程：前近代の日本の絵画から、近代以降の「日本画」概念へ
+  - 1.1 前近代の絵画（仏画・障壁画・絵巻・屏風など）を「日本画史」として語る際の前提
+  - 1.2 近代の区分としての「日本画」：明治期の「日本画／洋画」対立と制度（教育・展覧会）の役割
+  - 1.3 近年の再検討：東アジア交流史、版画・挿絵・工芸との境界、地域差と多様性
+- 2. 材料・技法・形式の基盤：画材・支持体・表装と、制作／鑑賞の場
+  - 2.1 画材と支持体：墨・岩絵具・膠・金銀泥、紙・絹、下図と粉本、保存修理の論点
+  - 2.2 形式と空間：掛幅・絵巻・屏風・襖絵・扇面など、建築・儀礼・生活空間との関係
+  - 2.3 制作体制とパトロネージ：宮廷・寺社・武家・町人、工房・家職・画塾、市場と流通
+- 3. 古代〜平安前期：仏教受容と宮廷文化の形成（飛鳥・奈良〜）
+  - 3.1 古代壁画・装飾：古墳壁画（高松塚古墳など）と大陸文化の受容
+  - 3.2 仏画の成立：曼荼羅・来迎図など、密教・浄土教と図像体系の展開
+  - 3.3 宮廷と写経文化：装飾経・絵仏師・絵所的な組織化、国家儀礼との接続
+- 4. 平安後期〜鎌倉：大和絵と絵巻物の成熟、写実志向の広がり
+  - 4.1 「やまと絵／唐絵」の枠組み：主題（物語・名所）と様式（色彩・線）の整理
+  - 4.2 絵巻の語り：『源氏物語絵巻』『伴大納言絵詞』などに見る時間表現と視線誘導
+  - 4.3 鎌倉の変化：武家政権下の需要、似絵（肖像）と宋画受容、仏画の写実化
+- 5. 室町：禅文化と水墨画（漢画）の定着、画題・鑑賞の制度化
+  - 5.1 禅寺ネットワーク（五山）と唐物：輸入・収集・鑑賞の枠組みが画風を規定する過程
+  - 5.2 雪舟等楊を中心に：山水・花鳥、筆墨表現の洗練と地域的展開
+  - 5.3 学習と規範：画譜・模本・詩書画の連関、伝統の正統化と変奏
+- 6. 桃山〜江戸前期：障壁画の拡大と、画派体制（狩野派を軸にした専門分化）
+  - 6.1 城郭・寺院の大画面：金碧障壁画、権力表象としての装飾と制作需要
+  - 6.2 狩野派の制度：工房・分業・粉本、狩野永徳／狩野探幽などを軸にした様式の整備
+  - 6.3 宮廷的伝統の継承：土佐派・住吉派、復古大和絵の位置づけ
+- 7. 江戸中期：装飾・写生・文人の多極化（琳派／円山・四条派／南画）
+  - 7.1 琳派：俵屋宗達・尾形光琳に代表される意匠化、工芸・デザインとの往還
+  - 7.2 写生画の展開：円山応挙・呉春（四条派）、画塾と都市文化、市場の拡大
+  - 7.3 文人画（南画）：池大雅・与謝蕪村など、漢詩文との結びつきと理想像の形成
+- 8. 江戸後期：浮世絵と「絵画／版画」の境界、洋風画の受容と混交
+  - 8.1 木版多色刷の産業：版元・絵師・彫師・摺師の分業、流通と統制（検閲）の影響
+  - 8.2 表現の拡張：葛飾北斎・歌川広重など、風景表現・シリーズ化と海外受容（ジャポニスム）
+  - 8.3 洋風画・長崎派：遠近法・陰影の導入、写実技法の受容と日本的再解釈
+- 9. 明治〜戦前：近代制度のもとでの「日本画」形成（教育・官展・画壇）
+  - 9.1 概念形成と理論：岡倉天心・フェノロサ、古美術評価と国民国家の文化政策
+  - 9.2 教育と展覧会：東京美術学校（1887）、文展（1907）〜帝展、審査制度が様式を方向づける過程
+  - 9.3 主要作家と論争：横山大観・菱田春草・上村松園など、新様式（朦朧体等）と題材、戦時期の動員と統制
+- 10. 戦後〜現代：多様化・国際化、保存修理と研究史の進展
+  - 10.1 戦後の再編：日展・院展の位置、抽象化・前衛による境界の拡張
+  - 10.2 文化財保護と修理：文化財保護法（1950）以降の制度、材料研究・保存科学と現場の課題
+  - 10.3 現代日本画をめぐる議論：グローバル展示と市場、地域性・ジェンダー表象、コレクション／アーカイブ化
 -->
+
+### 1. 「日本画」の語と射程：前近代の日本の絵画から、近代以降の「日本画」概念へ
+
+「日本画」という語は、古代から続く日本の絵画表現をそのまま指す固有の伝統名というより、近代に制度と対立概念のなかで形づくられた区分である。明治期に西洋の美術制度が移入されると、「絵画」を一枚の平面作品として自立させて扱う枠組みが強まり、同時に油彩・遠近法などを基準とする「洋画」が強い参照点になった。その結果、従来は寺社の荘厳、建築空間の装飾、書や工芸と連続していた多様な絵の営みが、あらためて「日本の絵画」として整理され、「日本画／洋画」という二分法が社会的に流通していく。
+
+この二分法は便利な反面、歴史を単線化しやすい。前近代の日本の絵画は、仏教図像や中国絵画の受容、朝鮮半島を含む東アジアの交流、さらに版画・挿絵・工芸意匠との往還のなかで成立してきた。「日本画史」を語るときには、「日本らしさ」を本質として前提するより、何がどの局面で「日本画」と名づけられ、どの実践がそこに含まれ／排除されてきたのか、という制度史・概念史の視点が欠かせない。近年は、美術館展示や国際市場の影響、地域的伝統の再評価、ジェンダーや表象の政治性なども含め、カテゴリーの境界自体が問い直されている。
+
+もう一つ重要なのは、近代日本で「美術」という語が制度として定着する過程そのものが、作品の見方を変えた点である。博覧会や博物館、学校教育、図録や写真複製は、作品を空間から切り出し、作者名・年代・様式で並べ替える視線を強めた。その視線は研究と保存を進める一方で、宗教実践や生活空間と結びついた作品の意味を薄めることもある。「日本画」の歴史は、制作の歴史であると同時に、分類・展示・語りの歴史でもある。
+
+### 2. 材料・技法・形式の基盤：画材・支持体・表装と、制作／鑑賞の場
+
+日本画の技法と材料は、表現の見た目だけでなく、作品の寿命や鑑賞環境まで規定してきた。墨、岩絵具、胡粉、金銀泥、膠といった画材は、紙や絹という支持体と組み合わさり、薄塗りや重ね塗り、にじみやかすれ、金地の反射など、独特の視覚効果を生む。下図・粉本・転写の実践は、個人の手業というより工房的制作や教育に深く関わり、同時に「古典」を反復可能にする技術として作用した。
+
+また、日本の絵画の多くは、額装された一枚絵としてではなく、掛幅・絵巻・屏風・襖絵・扇面といった形式で、建築や儀礼、生活空間と結びついて展開した。屏風や障壁画は空間を構成する装置であり、絵巻は手に取り、時間をかけて展開して読むメディアである。こうした形式は、鑑賞者の身体（歩く、座る、巻く、開く）を前提にしているため、近代の美術館での「正面から静止して見る」鑑賞法とは相性が良いとは限らない。
+
+制作体制の面では、宮廷・寺社・武家・町人という多様なパトロネージが、画題や様式を分岐させた。家職としての画派、画塾、町場の市場、出版による流通が複層的に絡み合い、「誰のために、どこに置かれ、どう見られるか」が、絵の形式と内容を左右し続けた。
+
+材料史の観点から見ると、近世の「絵具商」や画材流通の整備は、制作の裾野を広げた。とくに近代以降は、顔料の工業化や輸入材の増加によって色材の選択肢が増え、表現の幅が拡張する一方で、耐久性や変色の問題も新たに生じる。たとえばベロ藍（プルシアンブルー）の普及は青の表現を変えたが、同時に画材の由来が国際的になったことも示している。日本画の「伝統的材料」も固定的なセットではなく、時代ごとに更新されてきた。
+
+### 3. 古代〜平安前期：仏教受容と宮廷文化の形成（飛鳥・奈良〜）
+
+古代の絵画は、まず宗教と権力の場に強く結びついている。古墳壁画の遺例として知られる高松塚古墳壁画（7世紀末〜8世紀初頭）やキトラ古墳壁画（7〜8世紀）は、東アジア的な人物表現や天文図像を含み、当時の国際的文化圏のなかで絵画が成立していたことを示す。寺院の装飾でも、法隆寺金堂壁画（7世紀末頃、1949年の火災で大きく損傷）に代表されるように、仏教図像の体系とともに絵画技法が蓄積されていった。
+
+平安期にかけては、密教の曼荼羅や浄土教の来迎図など、信仰実践に直結する絵画が整備され、図像の規範（どの尊格をどう配置するか、どの場面を描くか）が作品の意味を支えた。同時に、宮廷文化のなかでは、装飾経や調度品の意匠など、文字・工芸・絵画が連続する領域が発達する。ここでの「絵」は、単独の芸術作品というより、儀礼・学芸・権威の表象を担う複合的メディアだった。
+
+また、制作の担い手としての「絵師」もこの時代に輪郭を持ち始める。宮廷では絵所のような組織が機能し、寺社でも仏画の需要に応じた工房的分業が進んだ。個人名では、平安時代の巨勢金岡（9世紀に活躍）をはじめ、宮廷絵師の名が後世の画史に登場するが、実際には多くが無名の集団制作である。作者概念が前面化するのはずっと後であり、初期の日本の絵画を近代的な「作家作品」と同じ枠で読むと、成立条件を取り違えやすい。
+
+### 4. 平安後期〜鎌倉：大和絵と絵巻物の成熟、写実志向の広がり
+
+平安後期になると、「やまと絵／唐絵」という枠組みが意識され、物語絵や名所絵など、宮廷社会の関心に即した主題が発達する。とりわけ絵巻物は、時間の経過を「巻の展開」に重ねることで、連続性と断絶を自在に操作できる形式だった。『源氏物語絵巻』（12世紀）に見られる吹抜屋台や人物の省略的表現は、建築空間と心理を同時に扱う装置として機能し、『伴大納言絵詞』（12世紀）や『信貴山縁起絵巻』（12世紀）では、群衆の動きや事件の推移が、視線誘導と構図設計によって語られる。
+
+一方で、絵巻の系譜には、戯画や風刺、動物の擬人化を含む多様な表現もある。『鳥獣人物戯画』（12〜13世紀頃）は、後世しばしば「漫画の祖」として語られるが、近代漫画のコマ割りとは異なる時間構造と鑑賞法に基づいており、安易な起源物語に回収すると、むしろ前近代のメディアの多様性が見えにくくなる。
+
+鎌倉期には武家政権の成立とともに、肖像（似絵）や仏画の写実性が強まり、宋画受容も進む。藤原隆信・藤原信実に連なるとされる肖像画の系譜は、人物の個別性を造形化する方向性を示し、宗教的図像の枠内でも観察に基づく表現が厚みを増した。ここでは、宮廷的な叙情と、武家・寺社の現実的需要が交差し、画題と様式が多方向へ開かれていく。
+
+この時期の絵巻は、物語性だけでなく、社会史・宗教史の資料としても価値を持つ。『春日権現験記絵』（14世紀）や『一遍上人絵伝』（13世紀末）に見られるように、縁起や教化の目的で制作された絵巻は、信仰の広がりと同時に、衣食住や移動、祭礼、都市と農村の風景を描き込み、当時の生活世界を可視化した。こうした「記録性」は、鑑賞者にとってのリアリティを高めるが、同時に制作意図（権威づけ、宣伝、教化）も含むため、読み解きには慎重さが必要である。
+
+同時に、「大和絵」という呼称自体も、固定した様式名というより、時代ごとに再解釈されてきた。宮廷的であること、物語や名所を描くこと、彩色と線描の組み合わせ、といった要素は確かに指標になるが、実作は混淆している。後世の画派が自らを正統化するために「大和絵」の系譜を編み直し、近代の美術史がそれを整理して教科書化した結果、実態以上に輪郭が強調されることもある。様式名は便利だが、歴史そのものではない。
+
+### 5. 室町：禅文化と水墨画（漢画）の定着、画題・鑑賞の制度化
+
+室町期の大きな変化は、禅寺を核とするネットワークが、絵画の制作・鑑賞・収集を制度化した点にある。唐物の輸入と鑑賞が文化的権威を帯びるなかで、水墨画（漢画）が「高雅」な表現として位置づけられ、詩・書・画が連関する文人趣味が広がった。画題も山水・花鳥・人物などへ整理され、作品は単なる装飾ではなく、鑑賞と評語を伴う対象として流通する。
+
+作家の面では、如拙、周文、雪舟等楊（1420〜1506）らを軸に、水墨表現が洗練される。雪舟は明との交流を背景にしながら、筆墨の強度と構図の緊張感で独自性を示し、地方へも影響を広げた。こうした水墨画の定着は、日本の絵画が「中国からの受容」と「ローカルな再編」を繰り返してきたことを、最も分かりやすく示す局面でもある。
+
+同時に、学習と規範の整備が進み、模本・画譜や、師資相承の語りが権威を支えるようになる。ここで成立した「正統」の枠組みは、後代の画派体制を準備し、伝統が固定化される契機にもなった。
+
+室町水墨画の典型としては、如拙の『瓢鮎図』（15世紀前半）に見られるように、禅問答的主題と余白の構成が結びつく例が挙げられる。雪舟の『天橋立図』（16世紀）などは、名所を写し取りつつ、構図の整理で「見る枠」を与える点で、写生と編集の両面を示す。さらに狩野元信（1476〜1559）のように、漢画的筆墨と大和絵的彩色・画題を統合する動きが現れ、後の狩野派の制度化へつながっていく。
+
+鑑賞の場にも変化がある。座敷飾りの発達や茶の湯の広がりは、掛幅を床の間に掛け、書画を取り合わせて見る作法を生み、絵画は「空間の中心」から「選び、組み合わせる対象」へと性格を変えていく。武家の東山文化に象徴される収集・鑑賞の実践は、作品に来歴や評価語彙を付与し、のちの古美術市場や真贋鑑定の土台にもなった。水墨画の歴史は、表現の変化だけでなく、見る制度の形成でもある。
+
+### 6. 桃山〜江戸前期：障壁画の拡大と、画派体制（狩野派を軸にした専門分化）
+
+戦国末から桃山期にかけて、城郭や寺院の大規模建築が増えると、障壁画の需要が急増し、絵画は空間を支配する権力表象の装置として再編される。金地に豪壮なモチーフを配する金碧障壁画は、採光の乏しい室内でも視覚効果が高く、政治的・儀礼的空間に適した表現だった。狩野永徳（1543〜1590）に代表される狩野派は、この需要に応える工房体制と様式を整え、粉本や分業によって制作を制度化していく。
+
+江戸前期には狩野探幽（1602〜1674）らが幕府の御用絵師として位置づけられ、画派は行政・儀礼の秩序と結びついて拡大する。一方、長谷川等伯（1539〜1610）のように、水墨を基調としながら空間の余白で強い効果を出す表現も並行し、単一の様式に還元できない多様性が存在した。
+
+また、宮廷的伝統を担う土佐派や住吉派は、大和絵の系譜を標榜しつつ、時代の需要に応じて様式を更新した。ここでは「誰が正統か」という系譜の語りが強まる一方で、実際の作品は、注文主・場・用途に応じて柔軟に変形していることも押さえる必要がある。
+
+障壁画の拡大は、絵画の「スケール」と「見せ方」を変えた。長谷川等伯の『松林図屏風』のように、抑制された水墨で空間の気配を表す作品もあれば、金碧の華やかさで権威を演出する作品もある。さらに南蛮屏風に代表されるように、海外との接触や異文化への眼差しが屏風形式に取り込まれ、視覚文化が政治・交易・好奇心と結びつく局面も生まれる。近世絵画は、国内の「伝統」だけで閉じるのではなく、対外関係の変化にも反応してきた。
+
+また、狩野派は江戸期を通じて全国へ展開し、諸大名の御用絵師として地域の制作体制を組織した。こうしたネットワークは技法や図様の標準化を促し、同じ主題が各地で反復される一方、土地の需要や競合関係に応じた変奏も生んだ。画派体制は「保守」と見なされやすいが、巨大な制作需要をさばくための実務的合理性でもあり、その合理性が様式の安定と多産を可能にした。
+
+### 7. 江戸中期：装飾・写生・文人の多極化（琳派／円山・四条派／南画）
+
+江戸中期には、都市文化と市場の拡大を背景に、画壇が多極化する。琳派は、俵屋宗達（17世紀前半に活躍）と本阿弥光悦（1558〜1637）の協働に端を発するとされ、尾形光琳（1658〜1716）や酒井抱一（1761〜1828）へ連なるなかで、意匠化されたモチーフ、装飾的構成、金銀地の効果を武器に、絵画と工芸・デザインの境界を横断した。ここでは「写実」よりも、形式化された美と反復が価値を持つ。
+
+これに対し、写生を前面に出したのが円山・四条派である。円山応挙（1733〜1795）は観察に基づく描写を掲げつつ、単純な自然主義ではなく、注文画としての分かりやすさや格調を両立させた。松村呉春（1752〜1811）らの四条派は、柔らかな筆致と都市的趣味を背景に展開し、画塾を通じて裾野を広げる。写生の強調はしばしば「近代化」と結びつけて語られるが、同時代の市場と教育の要請に適応した戦略として理解する方が実態に近い。
+
+文人画（南画）は、漢詩文の素養と結びつき、理想化された「文人」の自己像を表現に組み込む。池大雅（1723〜1776）や与謝蕪村（1716〜1784）は、詩書画の統合を通じて、職業画家とは異なる価値軸を提示した。ここでも中国文化の参照は不可欠であり、「日本的」なるものが外部参照を通じて構築される構図がはっきり現れる。
+
+同時代には、こうした三大潮流だけでは捉えにくい画家も多い。伊藤若冲（1716〜1800）の『動植綵絵』（18世紀中頃）に見られる細密な彩色と図像の密度、長沢芦雪（1754〜1799）の大胆な省略や奇抜な構図は、画派の規範からの逸脱としても、市場やパトロンの嗜好に応じた実験としても読める。江戸の画壇は、制度化された画派と、周縁での試行錯誤が同時に走る環境であり、「主流の発展史」だけに還元すると実態からずれる。
+
+### 8. 江戸後期：浮世絵と「絵画／版画」の境界、洋風画の受容と混交
+
+江戸後期の視覚文化を語るうえで、浮世絵を避けることはできない。もっとも、浮世絵は絵師の創作だけで完結せず、版元・彫師・摺師の分業、都市の消費文化、検閲や流通制度に規定される産業でもあった。鈴木春信（1725〜1770）による錦絵の洗練、喜多川歌麿（1753〜1806）の美人画、東洲斎写楽（1794年頃）の役者絵、葛飾北斎（1760〜1849）や歌川広重（1797〜1858）の風景表現は、シリーズ化と大量流通を通じて、視覚表現の語彙を拡張した。
+
+一方で、浮世絵は「絵画」か「版画」か、という分類の揺れを孕む。近代美術館の制度では、油彩の一品制作が中心になりやすく、版画は複製性ゆえに別枠化されがちだった。しかし歴史的には、出版と複製の回路こそが視覚文化を支え、絵画の価値観をも変えてきた。19世紀後半のジャポニスム（1860年代以降）で浮世絵が西洋の画家やデザインに影響した事実は、近代の「日本画」概念が国際的視線のなかで強化された側面も示している。
+
+また、洋風画や長崎を中心とする受容の系譜では、遠近法や陰影法が選択的に取り込まれた。司馬江漢（1747〜1818）や亜欧堂田善（1748〜1822）に見られる銅版画や洋風表現は、蘭学的知識や輸入版画の影響と結びつき、単なる「西洋模倣」ではなく、日本の需要に合わせた再構成として現れている。近代以前から「混交」は常態であり、純粋な系譜だけで語るのは実態とずれる。
+
+浮世絵の世界でも、時代が下るにつれて題材と機能は変化する。歌川国芳（1797〜1861）の武者絵や風刺的イメージ、月岡芳年（1839〜1892）の残酷絵・歴史画は、娯楽の枠を超えて時事や社会不安を反映した。また、輸入顔料であるベロ藍が19世紀前半に普及すると、北斎や広重の風景表現は色材の力で更新され、視覚的インパクトが増す。版画は「複製」ゆえに軽視されがちだが、同時代の視覚リテラシーを形づくった主役でもあり、近代の「日本画」形成に間接的に影響した。
+
+加えて、浮世絵は版画だけではなく、肉筆の作品も含む広い実践である。肉筆美人画や肉筆風俗画は、贈答や座敷飾りにも用いられ、版画とは異なる一点物の価値を持った。近代に入ると、版画としての浮世絵が海外で先に評価され、国内の再評価がそれに触発される側面もあった。こうした評価の往復運動は、「何を日本の絵画の中心に据えるか」というカノン形成の問題に直結する。
+
+### 9. 明治〜戦前：近代制度のもとでの「日本画」形成（教育・官展・画壇）
+
+明治期以降、「日本画」は制度によって輪郭を与えられる。岡倉天心（1863〜1913）とエルネスト・フェノロサ（1853〜1908）は、古美術の評価と保護を通じて、日本の美術を国民国家の文化資源として再編する枠組みを提示した。教育制度としては東京美術学校（1887年設立）が象徴的で、模写・古典研究と近代的カリキュラムが結びつき、画家の職能が体系化されていく。
+
+展覧会制度も決定的である。文部省美術展覧会（1907年開始、いわゆる文展）から帝展へと続く官設展は、審査・受賞・序列という仕組みを通じて、何が「正統的な日本画」かを具体的に形づくった。日本美術院（1898年設立）と院展は、官展と並ぶ場として、理念や人脈、評価軸を競合させる。横山大観（1868〜1958）、菱田春草（1874〜1911）、下村観山（1877〜1930）らの試みは、古典への依拠と新表現の両立をめぐる葛藤を体現し、朦朧体などの論争は、様式の是非だけでなく「日本画」の定義争いでもあった。
+
+大正から昭和前期にかけては、制度の枠組みが固まる一方で、表現上の選択肢も増える。竹内栖鳳（1864〜1942）のように写生と装飾性を折衷する動き、速水御舟（1894〜1935）や小林古径（1883〜1957）、前田青邨（1885〜1977）らによる古典回帰と精緻化は、「近代化＝西洋化」という単純図式では語れない多様な応答を示す。また日本美術院は1914年に横山大観らによって再興され、院展は官展とは異なる価値軸の提示を試みたが、こちらも内部の序列化や流派化を免れたわけではない。
+
+技法面でも、写生の徹底だけではなく、画面効果の追求が進む。岩絵具の粒度の選択や胡粉の扱い、金銀の使用、下地づくりなどが様式と結びつき、作品は「伝統技法の再現」ではなく、技術を更新しながら現代的な画面を構成する方向へ向かった。とはいえ、この更新は常に歓迎されたわけではなく、「伝統の護持」と「改革」の対立が繰り返し演じられ、その都度、どちらが「日本画らしいか」という規範の争いが起きた。
+
+女性画家の位置づけも重要である。上村松園（1875〜1949）は美人画の領域で高い評価を確立したが、その成功は例外的でもあり、近代の画壇が性別役割や制度上の障壁を抱えていたことも示す。さらに戦時期には、国家総動員のなかで展覧会や制作の自由度が狭まり、主題の選択や表現の方向づけが政治状況に影響される局面が強まった。ここでは個々の作家の姿勢を一律に断罪／美化するより、制度が作品の成立条件をどう変えたかを冷静に捉える必要がある。
+
+戦時期の影響は、題材や展示の枠組みだけでなく、作家のキャリアと記憶の編成にも及んだ。戦争が「描くべき現実」として現れたとき、直接的な戦闘場面に限らず、銃後の勤労、産業、国家儀礼、皇室や神社のモチーフなど、さまざまな主題が「時局」と結びつけられ得た。そこには自発的な協力も、生活のための妥協も、沈黙も混在する。敗戦（1945年）後は価値観の転換が急速に進み、戦時に形成された評価やネットワークが再編される一方で、個々の作品は「芸術」と「政治」のどちらの文脈で読むべきかという問いを残した。日本画の近代史を語るうえで、この断絶と連続を曖昧にせず、しかし単純な善悪に還元しない姿勢が求められる。
+
+### 10. 戦後〜現代：多様化・国際化、保存修理と研究史の進展
+
+戦後は、展覧会制度が再編される一方で、「日本画」の表現は一枚岩ではなくなる。日展（1946年開始）や院展は依然として大きな影響力を持つが、そこでの評価軸に収まらない動きも増え、抽象化や素材実験、写真や印刷物との関係の再定義など、境界を揺さぶる試みが続く。東山魁夷（1908〜1999）、平山郁夫（1930〜2009）、加山又造（1927〜2004）、片岡球子（1905〜2008）らは戦後日本画の多様な方向性を代表するが、同時に「巨匠」中心の語りが他の実践を見えにくくする危険もある。
+
+研究と展示の制度もまた戦後に整備される。東京国立近代美術館は1952年に開館し、近代以降の作品を体系的に収集・展示することで「近代日本画」という枠を可視化した。文化財の領域では、1930年に設立された美術研究所（後の東京文化財研究所）などの研究機関が調査・保存を担い、1968年の文化庁設置以後は、指定・修理・公開の制度がより行政的に運用されるようになる。こうした制度は、作品の保護と公開を進める一方で、評価の基準を固定化し、カノンを作りやすいという側面も持つ。
+
+その延長線上で、日本画家が文化財の模写・復元に関わる機会も増えた。たとえば法隆寺金堂壁画の再現模写（1960年代以降）は、失われた図像を現代の材料と技術でどう「再現」するかという課題を突きつけ、岩絵具や膠の扱い、古典的下地の研究を促した一方、模写が本来の作品体験を代替し得るのか、どこまでを復元と見なすのか、といった倫理的・方法論的問題も伴った。伝統技法の継承は、美的目的だけでなく、文化遺産の管理と教育の要請によっても駆動されるようになり、ここでも「日本画」の役割は拡張と再定義を迫られている。
+
+制度面では文化財保護法（1950年）が重要で、国宝・重要文化財の指定や保存修理の枠組みが整えられた。日本画は材料が湿度・光に敏感で、表装を含む修理が不可欠であるため、保存科学（顔料分析、膠の性質、劣化診断など）と職人技の協働が作品の存続を支える。保存は価値中立ではなく、どの時点の状態を「正」とするか、補彩や洗浄の範囲をどう定めるかといった判断が伴うため、透明性と議論可能性が求められる領域でもある。
+
+加えて、写真・デジタル画像による公開と研究の拡大は、作品の見方をさらに変えた。高精細画像や科学調査の可視化は、筆致や下図、修理履歴を広い層に共有しやすくするが、画面の物質性（表面の反射、絹や金地の質感、展示環境との関係）を置き換えられるわけではない。実物鑑賞と複製情報の役割分担をどう設計するかは、現代の「日本画」を支えるインフラの問題として残り続けている。
+
+教育の面でも、日本画は大学や専門学校の専攻として制度化され、技法の継承はカリキュラムと結びついた。これは技能の保存に寄与する一方、評価が学内・公募展・画廊市場の回路に偏りやすいという課題も生む。さらに、絵画以外のメディア（写真、映像、インスタレーション）と同列に競う現代美術の場では、「日本画」が技法なのかジャンルなのかを問われ続ける。制度に守られることと、制度に規定されることは表裏である。
+
+現代に入ると、国際展や市場の影響のもとで、日本画材を用いながら現代美術の文脈で制作する作家も現れ、「日本画」を技法として理解するのか、制度・共同体として理解するのか、という論点が再燃している。地域性、宗教的図像、歴史記憶、ジェンダー表象などをめぐる批評も増え、単に伝統を継承する物語では捉えにくい。日本画の歴史は、連続性（材料・形式・学習）と断絶（制度・価値観・国際環境）が交互に現れる過程として捉えるのが、最も実態に即した見取り図だろう。
